--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
 spring.application.name=app
 spring.sql.init.mode=always
-spring.datasource.url=jdbc:mysql://sql10.freesqldatabase.com:3306/sql10778429
+spring.datasource.url=jdbc:mysql://sql10.freesqldatabase.com:3306/sql10779841
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=sql10778429
-spring.datasource.password=Xu7dPakMqL
+spring.datasource.username=sql10779841
+spring.datasource.password=LJvA7jVgah
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
